# tools

cmake/代码引用/兄弟目录下/: CMakeLists.txt
package/example/identify_1.0_1.2.2.202012/DEBIAN/: README
package/example/identify_1.0_1.2.2.202012/usr/share/applications/: deb.desktop
package/example/identify_1.0_1.2.2.202030/DEBIAN/: README  changelog  control  copyright  postinst  postrm  prerm
package/example/identify_1.0_1.2.2.202030/usr/share/applications/: identify_msc.desktop
package/example/identify_workspace/identify_1.0_1.2.2.202028/DEBIAN/: README  changelog  control
package/example/identify_workspace/identify_1.0_1.2.2.202028/usr/share/applications/: .deb.desktop.swo  identify_msc.desktop
package/example/identify_workspace/src/gui/: Makefile
package/example/identify_workspace/src/gui/GuiWidget/: GuiWidget.pro  config.qrc  guiwidget.cpp  guiwidget.h  guiwidget.ui  guiwidget_ui.cpp  main.cpp
package/example/identify_workspace/src/gui/GuiWidget/firstpage_widget/: firstpagewidget.cpp  firstpagewidget.h  firstpagewidget.ui
package/example/identify_workspace/src/gui/GuiWidget/secondpage_widget/: secondpagewidget.cpp  secondpagewidget.h  secondpagewidget.ui
package/example/identify_workspace/src/gui/GuiWidget/thirdpage_widget/: thirdpagewidget.cpp  thirdpagewidget.h  thirdpagewidget.ui
package/example/identify_workspace/src/gui/GuiWidget/tool/: helper.h
